--- a/src/components/MainContent/MainContent.css
+++ b/src/components/MainContent/MainContent.css
@@ -73,6 +73,6 @@ main {
   main {
     gap: 15px;
     max-width: 90%;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 }
