--- a/src/components/Sections/MainContent/MainContent.css
+++ b/src/components/Sections/MainContent/MainContent.css
@@ -50,6 +50,12 @@ main {
 
 .cta-container .secondCta {
   font-size: 1.1rem;
+  background-color: #eef6ff;
+  border: none;
+}
+
+.cta-container .secondCta a {
+  color: #0d47a1;
 }
 
 .cta-container .secondCta:hover {
