--- a/src/components/Sections/AreReady/AreReady.css
+++ b/src/components/Sections/AreReady/AreReady.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 4rem 0;
+  padding: 4rem 1rem;
   text-align: center;
   background-color: white;
 }
