--- a/src/components/Sections/MainContent/MainContent.css
+++ b/src/components/Sections/MainContent/MainContent.css
@@ -68,11 +68,14 @@ main {
 
 @media screen and (max-width: 768px) {
   .headline {
-    font-size: 2rem;
+    font-size: 2.3rem;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: #0d47a1;
   }
 
+  .subHeadLine{
+    font-size: 1rem;
+  }
   .cta-container {
     flex-direction: column;
   }
